# xccute

./: Cargo.toml  readme.md
script_configs/: git_full_extractor.toml  wasm_server_bootstrap.toml
src/: cargo.rs  command.rs  command_builder.rs  command_chain.rs  command_registry.rs  fs.rs  kms.rs  lib.rs  macros.rs  main.rs  net.rs  preset.rs  proc.rs  psql.rs  runner.rs  script_config.rs  shell.rs  shell_scripts.rs  snapshot.rs  third_party.rs  toml_loader.rs  user.rs  utilscript.rs
src/fs/: cd.rs  chmod.rs  chown.rs  cp.rs  df.rs  du.rs  echo.rs  file.rs  ln.rs  ls.rs  mkdir.rs  mv.rs  nano.rs  rm.rs  rmdir.rs  stat.rs  touch.rs
src/net/: curl.rs  ftp.rs  ip.rs  nc.rs  netstat.rs  ping.rs  rsync.rs  scp.rs  sftp.rs  ss.rs  telnet.rs  wget.rs
src/preset/: loader.rs  preset.rs  registry.rs
src/proc/: htop.rs  id.rs  kill.rs  pgrep.rs  pkill.rs  ps.rs  psgrep.rs  top.rs  uptime.rs  w.rs  who.rs
src/runner/: error.rs  executor.rs
src/shell/: bash.rs  sh.rs  zsh.rs
src/shell_scripts/: script_builder.rs  script_builder_simple.rs
src/user/: groupadd.rs  passwd.rs  su.rs  sudo.rs  useradd.rs  usermod.rs  visudo.rs
src/utilscript/: awk.rs  cut.rs  grep.rs  head.rs  sed.rs  sort.rs  tail.rs  tee.rs  uniq.rs  wc.rs  xargs.rs
tests/: wasm_bootstrap_test.rs
tests/output/: bootstrap.sh
