[package]
name = "xccute"
version = "0.1.0"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "type safe declarative builders for shell commands in rust"

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/xccute"
readme = "readme.md"


[dependencies]
