[package]
name = "xccute"
version = "0.1.0"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "type safe declarative builders for shell commands in rust"

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/xccute"

readme = "readme.md"


[dependencies]



serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

toml = "0.8.20"
sha2 = "0.10.8"
chrono = { version = "0.4.40", features = ["serde"] }
hex = "0.4.3"

ed25519-dalek = "2.1.1"


